--- a/tictactoe-styles.css
+++ b/tictactoe-styles.css
@@ -61,7 +61,8 @@ footer a:hover {
     width: 525px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 15px;
+    font-weight: 900;
 
 }
 
@@ -71,6 +72,6 @@ footer a:hover {
     align-items: center;
     justify-content: center;
     color: rgb(255, 198, 93);
-    font-size: 72px;
+    font-size: 100px;
     padding: 0;
 }
