--- a/tictactoe-styles.css
+++ b/tictactoe-styles.css
@@ -15,13 +15,14 @@ body {
 
 header {
     display: flex;
-    font-size: 52px;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: 500;
     background-color: rgb(58, 67, 77);
     color: beige;
     align-items: center;
-    justify-content: center;
-    padding-top: 20px;
+    text-align: center;
+    justify-content: space-between;
+    padding: 20px 3em 0px 3em;
     letter-spacing: 5px;
     }
 
@@ -76,3 +77,22 @@ footer a:hover {
     padding: 0;
 }
 
+.player-input {
+    background-color: rgb(58, 67, 77);
+    border-style: solid;
+    border-color: beige;
+    border-width: 4px;
+    border-radius: 20px;
+    padding: 8px;
+    margin-top: 8px;
+    color: beige;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 600;
+}
+
+input:focus {
+    color: beige;
+    border-color: rgb(255, 198, 93);
+    outline: 0 rgb(255, 198, 93);
+}
