--- a/tictactoe-styles.css
+++ b/tictactoe-styles.css
@@ -53,6 +53,7 @@ footer a:hover {
     align-items: center;
     justify-content: center; 
     height: 100%;
+    margin-top: 200px;
 }
 
 #gameboard-grid {
@@ -103,7 +104,20 @@ input:focus {
     font-weight: 600;
     font-size: 56px;
     letter-spacing: 3px;
-    height: 190px;
+    height: 100px;
     align-items: flex-end;
     font-style: italic;
+}
+
+#reset {
+    margin: 100px 0;
+    background-color: rgb(255, 196, 69);
+    padding: 6px 8px;
+    border-radius: 10%;
+    border-style: solid;
+    border-color: rgba(58, 62, 66, 0.705);
+}
+
+#reset:hover {
+    background-color: rgb(252, 206, 121);
 }
